Themes: Add moar themes [3/3]
SDB: Adapt for AOSP Settings

Special Thanks to imjyotiraditya for the help

Change-Id: I77a072846e40efff8d659cb351e150c19bda44af

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1725,4 +1725,11 @@
     <string name="qs_header_background_title">Statusbar background</string>
     <string name="qs_header_background_black">Black</string>
     <string name="qs_header_background_transparent">Transparent</string>
+
+    <!-- Themes -->
+    <string name="theme_type_title">System theme</string>
+    <string name="theme_type_summary">Select theme</string>
+    <string name="theme_type_light">Light</string>
+    <string name="theme_type_pitch_black">Pitch black</string>
+    <string name="theme_type_solarized_dark">Solarized dark</string>
 </resources>
