--- a/res/xml/blissify_themes.xml
+++ b/res/xml/blissify_themes.xml
@@ -76,6 +76,15 @@
             android:key="android.theme.customization.icon_pack.android"
             android:title="@string/theme_customization_sysui_icon_title"/>
 
+    <ListPreference
+        android:key="theme_switch"
+        android:title="@string/theme_type_title"
+        android:summary="@string/theme_type_summary"
+        android:dialogTitle="@string/theme_type_summary"
+        android:entries="@array/theme_type_titles"
+        android:entryValues="@array/theme_type_values"
+        android:defaultValue="1"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory
