--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1733,4 +1733,11 @@
     <!-- Rotation button -->
     <string name="show_rotation_button_title">Rotation button</string>
     <string name="show_rotation_button_summary">Display rotation button on navigation bar when available</string>
+
+    <!-- Themes -->
+    <string name="theme_type_title">System theme</string>
+    <string name="theme_type_summary">Select theme</string>
+    <string name="theme_type_light">Light</string>
+    <string name="theme_type_pitch_black">Pitch black</string>
+    <string name="theme_type_solarized_dark">Solarized dark</string>
 </resources>
