--- a/res/xml/blissify_themes.xml
+++ b/res/xml/blissify_themes.xml
@@ -40,6 +40,20 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="category_system_theming"
+        android:icon="@drawable/ic_bliss_themes"
+        android:title="@string/theme_type_title">
+
+        <ListPreference
+            android:key="system_theme"
+            android:title="@string/theme_type_title"
+            android:persistent="false"
+            android:entries="@array/theme_type_titles"
+            android:entryValues="@array/theme_type_values" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="aosp_themeing"
         android:icon="@drawable/ic_bliss_themes"
         android:title="@string/aosp_themeing_title">
