--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1862,4 +1862,15 @@
         <item>1</item>
     </string-array>
 
+    <!-- Themes -->
+    <string-array name="theme_type_titles">
+        <item>@string/theme_type_default</item>
+        <item>@string/theme_type_solarized_dark</item>
+    </string-array>
+
+    <string-array name="theme_type_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 </resources>
