RGB Accent Picker [2/2]
Change-Id: I950f849cea3a5dc3d7f815f8e05bf18259d8d7c1

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1309,4 +1309,8 @@
     <string name="fod_recog_animation_bluefirework">Blue Fireworks</string>
     <string name="fod_recog_animation_coloros7_1">ColorOS7 1</string>
     <string name="fod_recog_animation_coloros7_2">ColorOS7 2</string>
+
+    <!-- Rgb Accenter -->
+    <string name="rgb_accenter_title">Rgb Accenter</string>
+
 </resources>
