--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -76,6 +76,20 @@
 
     </PreferenceCategory>
 
+    <!-- QS data usage  -->
+    <PreferenceCategory
+        android:key="qs_datausage_category"
+        android:title="@string/qs_datausage_title"
+        android:icon="@drawable/ic_network_monitor">
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_datausage"
+        android:title="@string/qs_datausage_title"
+        android:summary="@string/qs_datausage_subtitle"
+        android:defaultValue="false" />
+
+    </PreferenceCategory>
+
     <!-- QS brightness -->
     <PreferenceCategory
         android:title="@string/status_bar_brightness_category"
