--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -861,6 +861,9 @@
     <string name="custom_carrier_label_title">Custom carrier label</string>
     <string name="custom_carrier_label_explain">Enter a custom label. Leave blank to use your network name</string>
     <string name="custom_carrier_label_notset">Custom label currently not set</string>
+    <string name="status_bar_carrier_color">Carrier label color</string>
+    <string name="status_bar_carrier_font_style_title">Carrier label font</string>
+    <string name="status_bar_carrier_size">Carrier label size</string>
     <string name="show_carrier_title">Carrier label location</string>
     <string name="show_carrier_disabled">Disabled</string>
     <string name="show_carrier_keyguard">Lockscreen</string>
