--- a/res/xml/custom_carrier_label.xml
+++ b/res/xml/custom_carrier_label.xml
@@ -28,4 +28,27 @@
         android:key="custom_carrier_label"
         android:title="@string/custom_carrier_label_title" />
 
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="status_bar_carrier_font_style"
+        android:title="@string/status_bar_carrier_font_style_title"
+        android:entries="@array/font_style_entries"
+        android:entryValues="@array/font_style_values"
+        android:defaultValue="28"
+        android:dependency="status_bar_show_carrier" />
+
+    <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="status_bar_carrier_color"
+        android:title="@string/status_bar_carrier_color"
+        android:defaultValue="0xffffffff"
+        android:dependency="status_bar_show_carrier" />
+
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
+        android:key="status_bar_carrier_font_size"
+        android:title="@string/status_bar_carrier_size"
+        android:max="23"
+        settings:min="8"
+        settings:defaultValue="11"
+        settings:units="dp"
+        android:dependency="status_bar_show_carrier" />
+
 </PreferenceScreen>
