Motion & Squeeze: Let's use Google's controller method for preferences
Also point straight to AwareSettings class.

Kanged Ezio's controller from here:
https://github.com/ezio84/abc_packages_apps_Settings/blob/4427042988ca105413c60f8c28e5fc02397839f4/src/com/android/settings/gestures/AwareSettingsPreferenceController.java

TODO: Add back initial info dialog for user

Change-Id: I600a4200c2ff71f87b9bca202828414be387bca5
Signed-off-by: calebcabob <calphonic@gmail.com>

--- a/res/xml/blissify_pixel_gestures.xml
+++ b/res/xml/blissify_pixel_gestures.xml
@@ -12,20 +12,24 @@
 -->
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:key="gestures_settings"
     android:title="@string/blissify_pixel_gestures_title">
-
-    <com.google.android.settings.aware.AwareSettingsDialogPreference
-        android:key="aware_settings"
-        android:icon="@drawable/ic_bliss_aware"
-        android:title="@string/aware_settings_title"
-        android:summary="@string/aware_settings_summary" />
 
     <Preference
         android:key="active_edge_category"
         android:icon="@drawable/ic_bliss_active_edge"
         android:title="@string/active_edge_title"
         android:summary="@string/active_edge_summary"
-        android:fragment="com.blissroms.blissify.fragments.gestures.ActiveEdge" />
+        android:fragment="com.blissroms.blissify.fragments.gestures.ActiveEdge"
+        settings:controller="com.blissroms.blissify.helpers.ActiveEdgeSettingsPreferenceHelper" />
+
+    <Preference
+        android:key="aware_settings"
+        android:icon="@drawable/ic_bliss_aware"
+        android:title="@string/aware_settings_title"
+        android:summary="@string/aware_settings_summary"
+        android:fragment="com.google.android.settings.aware.AwareSettings"
+        settings:controller="com.blissroms.blissify.helpers.MotionSensePreferenceHelper" />
 
 </PreferenceScreen>
