--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -28,6 +28,7 @@
 
     <SwitchPreference
         android:key="disable_nav_keys"
+        android:icon="@drawable/ic_nav_buttons"
         android:title="@string/disable_navkeys_title"
         android:summary="@string/disable_navkeys_summary"
         android:defaultValue="false" />
@@ -44,17 +45,20 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="navigation_bar_menu_arrow_keys"
+            android:icon="@drawable/ic_nav_buttons"
             android:title="@string/navigation_bar_arrow_keys_title"
             android:summary="@string/navigation_bar_arrow_keys_summary"
             android:defaultValue="false" />
 
        <com.bliss.support.preferences.SecureSettingSwitchPreference
             android:key="navbar_inverse_layout"
+            android:icon="@drawable/ic_nav_buttons"
             android:title="@string/navigation_bar_invert_layout_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="navigation_home_long_press"
+            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/navigation_bar_home_long_press_title"
             android:title="@string/navigation_bar_home_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -72,6 +76,7 @@
 
         <ListPreference
             android:key="navigation_app_switch_long_press"
+            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/navigation_bar_app_switch_long_press_title"
             android:title="@string/navigation_bar_app_switch_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -91,6 +96,7 @@
 
         <SwitchPreference
             android:key="power_end_call"
+            android:icon="@drawable/ic_call_options"
             android:title="@string/power_end_call_title"
             android:summary="@string/power_end_call_summary"
             android:persistent="false"/>
@@ -125,6 +131,7 @@
 
         <SwitchPreference
             android:key="home_answer_call"
+            android:icon="@drawable/ic_call_options"
             android:title="@string/home_answer_call_title"
             android:summary="@string/home_answer_call_summary"
             android:persistent="false"/>
@@ -290,12 +297,14 @@
         <!-- Audio Panel view  -->
         <PreferenceScreen
             android:key="volume_panel"
+            android:icon="@drawable/ic_volume"
             android:title="@string/audio_panel_view_title"
             android:summary="@string/audio_panel_view_summary"
             android:fragment="com.blissroms.blissify.fragments.buttons.VolumePanel" />
 
         <Preference
             android:key="vol_steps"
+            android:icon="@drawable/ic_volume"
             android:title="@string/volume_steps_title"
             android:summary="@string/volume_steps_summary"
             android:fragment="com.blissroms.blissify.fragments.buttons.VolumeSteps" />
@@ -308,12 +317,14 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="volume_answer_call"
+            android:icon="@drawable/ic_call_options"
             android:title="@string/volume_answer_call_title"
             android:summary="@string/volume_answer_call_summary"
             android:defaultValue="false" />
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="volbtn_music_controls"
+            android:icon="@drawable/ic_music_visualizer"
             android:title="@string/volbtn_music_controls_title"
             android:summary="@string/volbtn_music_controls_summary"
             android:defaultValue="true" />
@@ -328,6 +339,7 @@
 
         <SwitchPreference
             android:key="swap_volume_buttons"
+            android:icon="@drawable/ic_volume"
             android:title="@string/swap_volume_buttons_title"
             android:summary="@string/swap_volume_buttons_summary" />
 
