--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -24,6 +24,7 @@
         android:key="bliss_header"
         android:layout="@layout/statusbar_header" />
 
+    <!-- Clock -->
     <PreferenceCategory
         android:key="status_bar_clock_key"
         android:icon="@drawable/ic_clock"
@@ -46,6 +47,7 @@
 
     </PreferenceCategory>
 
+    <!-- Status bar Battery -->
     <PreferenceCategory
         android:key="status_bar_battery_key"
         android:icon="@drawable/ic_battery_bar"
@@ -73,7 +75,6 @@
             android:summary="@string/status_bar_battery_text_charging_summary"
             android:defaultValue="true" />
 
-        <!-- Text charging symbol -->
         <com.bliss.support.preferences.SystemSettingListPreference
             android:key="text_charging_symbol"
             android:title="@string/text_charging_symbol_title"
@@ -85,6 +86,7 @@
 
     </PreferenceCategory>
 
+    <!-- BatteryBar -->
     <PreferenceCategory
         android:key="batterybar_key"
         android:icon="@drawable/ic_battery_bar"
@@ -98,17 +100,10 @@
 
     </PreferenceCategory>
 
+    <!-- System Icons -->
     <PreferenceCategory
         android:title="@string/status_bar_icons_title"
         android:icon="@drawable/ic_statusbar_icons">
-
-<!--
-        <lineageos.preference.LineageSystemSettingSwitchPreference
-            android:key="status_bar_notif_count"
-            android:title="@string/status_bar_notif_count_title"
-            android:summary="@string/status_bar_notif_count_summary"
-            android:defaultValue="true" />
--->
 
         <PreferenceScreen
             android:key="status_bar_icons"
@@ -117,17 +112,31 @@
             <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
         </PreferenceScreen>
 
+      <Preference
+            android:key="advanced_icons"
+            android:title="@string/statusbar_advanced_icons"
+            android:summary="@string/statusbar_advanced_icons_summary"
+            android:fragment="com.blissroms.blissify.fragments.statusbar.AdvancedStatusbar" />
+
+    </PreferenceCategory>
+
+    <!-- Carrier Label -->
+    <PreferenceCategory
+        android:title="@string/carrier_label_settings_title"
+        android:icon="@drawable/ic_statusbar_icons">
+
         <Preference
             android:key="carrier_label"
             android:title="@string/carrier_label_settings_title"
             android:summary="@string/carrier_label_settings_summary"
             android:fragment="com.blissroms.blissify.fragments.statusbar.CustomCarrierLabel" />
 
-      <Preference
-          android:key="advanced_icons"
-          android:title="@string/statusbar_advanced_icons"
-          android:summary="@string/statusbar_advanced_icons_summary"
-          android:fragment="com.blissroms.blissify.fragments.statusbar.AdvancedStatusbar" />
+    </PreferenceCategory>
+
+    <!-- Network Traffic -->
+    <PreferenceCategory
+        android:title="@string/carrier_label_settings_title"
+        android:icon="@drawable/ic_statusbar_icons">
 
       <PreferenceScreen
           android:key="network_traffic_settings"
@@ -137,6 +146,7 @@
 
     </PreferenceCategory>
 
+    <!-- Brightness -->
     <PreferenceCategory
         android:title="@string/status_bar_brightness_category"
         android:icon="@drawable/ic_blissify_misc">
