--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -24,61 +24,12 @@
         android:key="bliss_header"
         android:layout="@layout/notifications_header" />
 
-    <com.bliss.support.preferences.GlobalSettingMasterSwitchPreference 
-        android:key="heads_up_notifications_enabled"
-        android:fragment="com.blissroms.blissify.fragments.notifications.HeadsUp"
-        android:icon="@drawable/ic_headsup"
-        android:title="@string/heads_up_notifications"
-        android:summary="@string/heads_up_notifications_summary"
-        android:defaultValue="true" />
-
-    <com.bliss.support.preferences.SystemSettingSwitchPreference
-        android:key="force_expanded_notifications"
-        android:title="@string/force_expanded_notifications_title"
-        android:summary="@string/force_expanded_notifications_summary"
-        android:defaultValue="false" />
-
-    <com.bliss.support.preferences.SystemSettingSwitchPreference
-        android:key="hide_smart_replies"
-        android:title="@string/hide_smart_replies_title"
-        android:summary="@string/hide_smart_replies_summary"
-        android:defaultValue="false"/>
-
-
-    <com.bliss.support.preferences.SystemSettingSwitchPreference
-        android:key="notification_guts_kill_app_button"
-        android:title="@string/notification_guts_kill_app_button_title"
-        android:summary="@string/notification_guts_kill_app_button_summary"
-        android:defaultValue="false" />
-
-    <com.bliss.support.preferences.SystemSettingListPreference
-        android:key="status_bar_show_ticker"
-        android:title="@string/ticker_screen_title"
-        android:entries="@array/ticker_mode_entries"
-        android:entryValues="@array/ticker_mode_values"
-        android:defaultValue="0" />
-
-    <com.bliss.support.preferences.SystemSettingListPreference
-        android:key="status_bar_ticker_animation_mode"
-        android:title="@string/ticker_animation_mode_title"
-        android:entries="@array/ticker_animation_mode_entries"
-        android:entryValues="@array/ticker_animation_mode_values"
-        android:defaultValue="1" />
-
-    <com.bliss.support.preferences.SystemSettingSeekBarPreference
-        android:key="status_bar_ticker_tick_duration"
-        android:title="@string/ticker_tick_duration_title"
-        settings:min="500"
-        settings:interval="100"
-        android:max="10000"
-        android:defaultValue="3000"
-        settings:units="@string/unit_milliseconds" />
-
+    <!-- Edge Light -->
     <PreferenceCategory
         android:key="notification_screen"
+        android:icon="@drawable/ic_settings_leds"
         android:title="@string/notification_screen_title" >
 
-        <!-- Preview -->
         <com.blissroms.blissify.fragments.notifications.AmbientLightSettingsPreview
             android:key="ambientlight_preview"
             android:layout="@layout/ambient_light"
@@ -117,8 +68,56 @@
             android:dependency="pulse_ambient_light" />
     </PreferenceCategory>
 
+    <!-- Heads Up -->
+    <PreferenceCategory
+        android:key="heads_up_category"
+        android:icon="@drawable/ic_headsup"
+        android:title="@string/heads_up_notifications" >
+
+    <com.bliss.support.preferences.GlobalSettingMasterSwitchPreference 
+        android:key="heads_up_notifications_enabled"
+        android:fragment="com.blissroms.blissify.fragments.notifications.HeadsUp"
+        android:title="@string/heads_up_notifications"
+        android:summary="@string/heads_up_notifications_summary"
+        android:defaultValue="true" />
+
+    </PreferenceCategory>
+
+    <!-- Ticker -->
+    <PreferenceCategory
+        android:key="status_bar_ticker"
+        android:icon="@drawable/ic_headsup"
+        android:title="@string/ticker_screen_title" >
+
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="status_bar_show_ticker"
+        android:title="@string/ticker_screen_title"
+        android:entries="@array/ticker_mode_entries"
+        android:entryValues="@array/ticker_mode_values"
+        android:defaultValue="0" />
+
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="status_bar_ticker_animation_mode"
+        android:title="@string/ticker_animation_mode_title"
+        android:entries="@array/ticker_animation_mode_entries"
+        android:entryValues="@array/ticker_animation_mode_values"
+        android:defaultValue="1" />
+
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
+        android:key="status_bar_ticker_tick_duration"
+        android:title="@string/ticker_tick_duration_title"
+        settings:min="500"
+        settings:interval="100"
+        android:max="10000"
+        android:defaultValue="3000"
+        settings:units="@string/unit_milliseconds" />
+
+    </PreferenceCategory>
+
+    <!-- Lockscreen Notificatios -->
     <PreferenceCategory
         android:key="lockscreen_notifications_category"
+        android:icon="@drawable/ic_statusbar_icons"
         android:title="@string/lockscreen_notifications_category" >
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
@@ -138,8 +137,10 @@
 
     </PreferenceCategory>
 
-  <PreferenceCategory
-        android:title="@string/breathing_notifications_category" >
+    <!-- Breathing Notifications -->
+    <PreferenceCategory
+        android:title="@string/breathing_notifications_category"
+        android:icon="@drawable/ic_force_close_notifications">
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="sms_breath"
@@ -161,8 +162,10 @@
     
     </PreferenceCategory>
 
-  <PreferenceCategory
-        android:title="@string/notifications_vib_category" >
+    <!-- Notification options -->
+    <PreferenceCategory
+        android:title="@string/notifications_vib_category" 
+        android:icon="@drawable/ic_force_close_notifications">
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="vibrate_on_notifications"
@@ -176,10 +179,30 @@
         android:summary="@string/notification_sound_vib_screen_on_summary"
         android:defaultValue="true" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="force_expanded_notifications"
+        android:title="@string/force_expanded_notifications_title"
+        android:summary="@string/force_expanded_notifications_summary"
+        android:defaultValue="false" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="hide_smart_replies"
+        android:title="@string/hide_smart_replies_title"
+        android:summary="@string/hide_smart_replies_summary"
+        android:defaultValue="false"/>
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="notification_guts_kill_app_button"
+        android:title="@string/notification_guts_kill_app_button_title"
+        android:summary="@string/notification_guts_kill_app_button_summary"
+        android:defaultValue="false" />
+
     </PreferenceCategory>
 
+    <!-- Incall vib -->
     <PreferenceCategory
         android:key="incall_vib_options"
+        android:icon="@drawable/ic_call_options"
         android:title="@string/incall_noti_category" >
 
         <com.bliss.support.preferences.SystemSettingSwitchPreference
@@ -199,8 +222,10 @@
 
     </PreferenceCategory>
 
+    <!-- Flashlight on call -->
     <PreferenceCategory
         android:key="notification_flash"
+        android:icon="@drawable/ic_call_options"
         android:title="@string/notification_flash_title" >
 
         <ListPreference
