--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -96,6 +96,7 @@
 
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="use_old_mobiletype"
+            android:icon="@drawable/ic_network"
             android:title="@string/use_old_mobiletype_title"
             android:summary="@string/use_old_mobiletype_summary"
             android:defaultValue="false" />
