--- a/res/xml/gaming_mode_settings.xml
+++ b/res/xml/gaming_mode_settings.xml
@@ -32,14 +32,12 @@
         android:defaultValue="false" />
 
     <!-- Heads up -->
-    <com.bliss.support.preferences.SystemSettingListPreference
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="gaming_mode_headsup_toggle"
         android:title="@string/gaming_mode_headsup_title"
+        android:summary="@string/gaming_mode_headsup_summary"
         android:dependency="gaming_mode_enabled"
-        android:entries="@array/gaming_mode_headsup_toggle_entries"
-        android:entryValues="@array/gaming_mode_headsup_toggle_values"
-        android:summary="%s"
-        android:defaultValue="1" />
+        android:defaultValue="true" />
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="gaming_mode_notifications_feedback"
