blissify: SystemUI: qs quickbar columns config
Change-Id: I195337a3c97ac1e15c35b46ed23eb6eceb0be04c

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1074,4 +1074,19 @@
         <item>1</item>
     </string-array>
 
+    <!-- QS battery style  -->
+    <string-array name="qs_quickbar_layout_entries" translatable="false">
+        <item>@string/qs_quickbar_auto</item>
+        <item>@string/qs_quickbar_six</item>
+        <item>@string/qs_quickbar_seven</item>
+        <item>@string/qs_quickbar_eight</item>
+    </string-array>
+
+    <string-array name="qs_quickbar_layout_values" translatable="false">
+        <item>-1</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+    </string-array>
+
 </resources>
