--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -88,6 +88,14 @@
         android:icon="@drawable/ic_statusbar_icons"
         android:title="@string/qs_columns_rows_category_title" >
 
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="qs_quickbar_columns"
+        android:title="@string/sysui_qqs_count_title"
+        android:dialogTitle="@string/sysui_qqs_count_title"
+        android:entries="@array/qs_quickbar_layout_entries"
+        android:entryValues="@array/qs_quickbar_layout_values"
+        android:defaultValue="6" />
+
     <com.bliss.support.preferences.SystemSettingSeekBarPreference
         android:key="qs_rows_portrait"
         android:title="@string/qs_rows_portrait_title"
