--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -173,6 +173,12 @@
         android:persistent="false"
         android:dependency="qs_panel_bg_use_fw" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_blur"
+        android:title="@string/blur_quicksettings"
+        android:summary="@string/blur_quicksettings_subtitle"
+        android:defaultValue="true" />
+
     </PreferenceCategory>
 
     <!-- QS Themes -->
