Allow controlling QS blur alpha [2/2]
Change-Id: Icdc2974ba589fefe5d81cb1d7342563e0bb28780

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1100,5 +1100,7 @@
     <!-- QS blur -->
     <string name="blur_quicksettings">Blur behind quick settings</string>
     <string name="blur_quicksettings_subtitle">blurs darkened background behind quick settings</string>
+    <string name="qs_blur_alpha_title">Blur alpha</string>
+    <string name="qs_blur_alpha_summary">Sets the blur transparency</string>
 
 </resources>
