--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -179,6 +179,15 @@
         android:summary="@string/blur_quicksettings_subtitle"
         android:defaultValue="true" />
 
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
+       android:key="qs_blur_alpha"
+       android:title="@string/qs_blur_alpha_title"
+       android:summary="@string/qs_blur_alpha_summary"
+       android:max="100"
+       settings:min="1"
+       settings:units="%"
+       android:dependency="qs_blur" />
+
     </PreferenceCategory>
 
     <!-- QS Themes -->
